fixing book view + alignment issue on index

--- a/src/project/books/css/style.css
+++ b/src/project/books/css/style.css
@@ -20,12 +20,14 @@ body {
 	width: 285px;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: flex-start;
 }
 
 .book_card h2 {
 	font-size: 28px;
 	line-height: 32px;
+	height: 64px; 
+    overflow: hidden;
 	font-family: "IBM Plex Serif";
 	margin-bottom: 12px;
 	font-weight: 300;
@@ -33,13 +35,15 @@ body {
 }
 
 .book_card p {
+	height: 24px;
 	margin-bottom: 10px;
 }
 
 .book_card .actions {
 	display: flex;
 	gap: 8px;
-	justify-content: flex-end;
+	justify-content: center; 
+    padding-top: 10px;
 }
 
 .book_card .actions a {
@@ -59,6 +63,7 @@ body {
 	object-fit: cover;
 	border: 1px solid #7c75f1;
 	height: 340px;
+	margin-top: auto;
 }
 
 .filters {
